<resources>
    <string name="errorAcessAccount">Não foi possível encontrar sua conta. Verificar se o preenchimento está correto.</string>
    <string name="emailRegistered">Esse email já foi registrado.</string>
    <string name="uninformed">Esse email já foi registrado.</string>
    <string name="tfe_ic_app_name" translation_description="Image Classification demo app [CHAR_LIMIT=40]">TFL Classify</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
    </string-array>
    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">App Mosquito</string>
    <string name="menu_home">Página inicial</string>
    <string name="menu_maps">Mapas</string>
    <string name="menu_information">Informações</string>
    <string name="menu_statistics">Estatísticas</string>
    <string name="menu_history">Histórico</string>
    <string name="menu_message">Mensagens</string>
    <string name="menu_settings">Configurações</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="permission_denied">Permission was denied. Please consider granting it in order to use all features.</string>
    <string name="permission_denied_never_ask_again">Permission was denied with never ask again.</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="user_or_email">Usuário ou Email</string>
    <string name="user">Usuário</string>
    <string name="go_back">Voltar a início</string>
    <string name="change">Modificar</string>
    <string name="app_mosquito">App Mosquito</string>
    <string name="acess">Entrar</string>
    <string name="help">Dúvidas?</string>
    <string name="recovery_password">Pressione modificar e aguarde email</string>
    <string name="code">Código</string>
    <string name="user_name">Nome completo</string>
    <string name="acess_free">Acessar sem cadastro</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="terms">Termos de uso</string>
    <string name="password_char">Senha (Mínimo 8 digitos)</string>
    <string name="email_user">Email de usuário</string>
    <string name="register">Cadastra-se</string>
    <string name="acess_with">Acessar com</string>
    <string name="password_acess">Senha de acesso</string>
    <string name="recovery">Esqueceu a senha?</string>
    <string name="not_register">Ainda não é registrado?</string>
    <string name="register_now">Registre-se agora</string>
    <string name="gallery">Galeria de vídeos</string>
    <string name="camera">Gravação de vídeos</string>
    <string name="open_file">Abrir arquivo externo</string>
    <string name="filters">Filtros inteligêntes</string>
    <string name="color_balance">Balanceamento de cores</string>
    <string name="tasks">Processos em andamento</string>
    <string name="style_transference">Transferência de estilos</string>
    <string name="edit">Editor de imagens</string>
    <string name="informations">Ajuda e informações</string>
    <string name="aplication_name">Cartoon Movie Creator</string>
    <string name="aplication_short_name">CMovie Creator</string>
    <string name="recovery_register">Recuperação de cadastro</string>
</resources>