<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/send"
            android:title="@string/menu_maps" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/icon_filters"
            android:title="@string/menu_statistics" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/icon_balance"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_message"
            android:icon="@android:drawable/stat_sys_download_done"
            android:title="Dúvidas" />

        <item
            android:id="@+id/nav_recognize"
            android:icon="@drawable/icon_tranference"
            android:title="Reconhecimento" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/icon_upscale"
            android:title="@string/menu_information" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/icon_information"
            android:title="@string/menu_information" />



    </group>
</menu>