<?xml version="1.0" encoding="utf-8"?>
<navigation

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.mosquito.appmosquito.appmosquito.Gallery.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/activity_videos" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="app.mosquito.appmosquito.appmosquito.Camera.CameraFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_home" />

   
    <fragment
        android:id="@+id/nav_information"
        android:name="app.mosquito.appmosquito.appmosquito.Cartoon.CartoonizeFragment"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/nav_filters"
        android:name="app.mosquito.appmosquito.appmosquito.Filters.FiltersFragment"
        android:label="@string/filters"
        tools:layout="@layout/fragment_filters" />


    <fragment
        android:id="@+id/nav_history"
        android:name="app.mosquito.appmosquito.appmosquito.Cartoon.CartoonFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />



</navigation>