<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF03ADD8"
    android:clickable="true"
    android:hapticFeedbackEnabled="true"
    android:soundEffectsEnabled="true"
    tools:context=".Authentication.ActivityRegisterAccount">

    <ImageView
        android:id="@+id/imageVkkkkk2"
        android:layout_width="match_parent"
        android:layout_height="464dp"
        android:background="@drawable/button_design_fill_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewAuthUser6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery_register"
        android:textColor="#F9FBFB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853"
        app:srcCompat="@drawable/button_design_fill"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="50dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853"
        app:srcCompat="@drawable/button_design_fill"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iconAuthAcess2"
        android:layout_width="92dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        app:srcCompat="@drawable/icon_cartoon"
        tools:ignore="ContentDescription,MissingConstraints" />

    <EditText
        android:id="@+id/editTextAuthPasswordRegister"
        android:layout_width="270dp"
        android:layout_height="52dp"
        android:backgroundTint="#FDFCFC"
        android:ems="10"
        android:hint="@string/recovery_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#D8D7D7"
        android:textColorHint="#DDDBDB"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewAuthAcessBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_mosquito"
        android:textColor="#FF03ADD8"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textColor="#FF03ADD8"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="#F9FBFB"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textColor="#FF03ADD8"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextAuthUserRegister"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:backgroundTint="#FDFCFC"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#D8D7D7"
        android:textColorHint="#D3D0D0"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextAuthEmailRegister"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:backgroundTint="#FDFCFC"
        android:ems="10"
        android:hint="@string/email_user"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="#FBFBFB"
        android:textColorHighlight="#D8D7D7"
        android:textColorHint="#D3D0D0"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonAuthAcessRegister"
        android:layout_width="286dp"
        android:layout_height="54dp"
        android:background="@drawable/button_design_fill"
        android:onClick="createUser"
        android:text="@string/change"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <TextView
        android:id="@+id/textViewAuthUser2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textColor="#FF03ADD8"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewAuthUser4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#FF03ADD8"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>