<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1.0"
    android:background="#FDFDFD"
    android:clickable="true"
    android:hapticFeedbackEnabled="true"

    android:soundEffectsEnabled="true"
    tools:context=".Authentication.RegisterProfileFirst">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shared Your Movies"
        android:textColor="#029BC3"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <ImageView
        android:id="@+id/imageViewAuthLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:alpha="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123"
        app:srcCompat="@drawable/logo_white_background" />

    <Button
        android:id="@+id/buttonSecondNext"
        android:layout_width="293dp"
        android:layout_height="55dp"
        android:background="@drawable/button_design_empty"
        android:onClick="createUser"
        android:text="@string/acess"
        android:textColor="#03ADD8"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <Button
        android:id="@+id/buttonAuthRegister"
        android:layout_width="296dp"
        android:layout_height="56dp"
        android:background="@drawable/button_design_fill"
        android:onClick="createUser"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <TextView
        android:id="@+id/textViewAuthDirectAcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acess_free"
        android:textColor="#03ADD8"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />


</androidx.constraintlayout.widget.ConstraintLayout>